examples/04 - managing exceptions/managing_exceptions - result.txt

c:\>managing_exceptions.py
Traceback (most recent call last):

  [...]

    raise Exception(output)
Exception:                      ^
% Invalid input detected at '^' marker.
Exception ignored in: <function _ProactorBasePipeTransport.__del__ at 0x03DF6850>
Traceback (most recent call last):
  File "C:\Python3\lib\asyncio\proactor_events.py", line 116, in __del__
  File "C:\Python3\lib\asyncio\proactor_events.py", line 108, in close
  File "C:\Python3\lib\asyncio\base_events.py", line 719, in call_soon
  File "C:\Python3\lib\asyncio\base_events.py", line 508, in _check_closed
RuntimeError: Event loop is closed

c:\>
-------------------------------------------


c:\>managing_exceptions.py
Error:
                     ^
% Invalid input detected at '^' marker.

c:\>

-------------------------------------------

